--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="game-container">
         <canvas id="gameCanvas" width="800" height="400"></canvas>
         <button id="startButton">Start</button>
+        <div id="gameOverMessage"></div>
     </div>
     <script src="game.js"></script>
 </body>
